1998-08-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* NEWS: Note addition of Pixmap output and snapshot capability.

	* INSTALL: Fix note about --disable-shared and --enable-shared=no
	equivalence.

1998-08-07  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* NEWS: Note Zone memory leak bug fix.

1998-08-06  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* VERSION: Bump.

	* Makefile.appl.in (.m.o): Add CPPFLAGS.

1998-08-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* NEWS: Review changes so far for 1.3.

1998-07-30  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* acconfig.h: Rename USE_FFCALL to USE_AVCALL.

1998-07-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* configure.in: Add md_CHECK_POINER_FMT.

	* acconfig.h: Add POINTER_FMT_HEX_PREFIX.

	* VERSION: Bump.

1998-07-23  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.appl.in (SYSLIBS): Remove -lobjc.

	* configure.in: Add check for Objective C library (and pthread).
	(CPPFLAGS): Add -D_GNU_SOURCE if stpcpy, strndup or strnlen are found.

	* VERSION: Bump.
	
1998-07-22  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* configure.in: Set tcllibname and tklibname with each AC_ARG_WITH.

1998-07-21  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (install-data-local): Install config.h in includedir.

	* configure.in: Check for memchr, memcpy, memset, realpath,
	stpcpy, strchr, strcmp, strdup, strlen, strncmp, strndup, strnlen,
	strpbrk, and strsep.

1998-07-19  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* configure.in: Add md_CHECK_INLINING check.

	* VERSION: Bump version to 1998-07-19, 1.2.1.

1998-07-18  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.appl.in (MODULES): Remove.

1998-07-13  Alex Lancaster  <alex@santafe.edu>

	* configure.in (AC_OUTPUT): Add etc/Makefile and etc/config.swarm
	to list of extracted files.

	* Makefile.am (SUBDIRS): Add etc/ directory.

1998-06-30  Marcus G. Daniels  <mgd@ute.santafe.edu>
