@@ -6,7 +6,6 @@ libdir = @libdir@
 tcllibdir = @tcllibdir@
 tklibdir = @tklibdir@
 bltlibdir = @bltlibdir@
-tclobjcdir = @tclobjcdir@
 ffidir = @ffidir@
 zliblibdir = @zliblibdir@
 pnglibdir = @pnglibdir@
@@ -19,7 +18,6 @@ INCLUDES = -I$(includedir)
 TCLLDFLAGS = @TCLLDFLAGS@
 TKLDFLAGS = @TKLDFLAGS@
 BLTLDFLAGS = @BLTLDFLAGS@
-TCLOBJCLDFLAGS = @TCLOBJCLDFLAGS@
 FFILDFLAGS = @FFILDFLAGS@
 PNGLDFLAGS = @PNGLDFLAGS@
 ZLIBLDFLAGS = @ZLIBLDFLAGS@
@@ -27,7 +25,6 @@ ZLIBLDFLAGS = @ZLIBLDFLAGS@
 TCLLIB = @TCLLIB@
 TKLIB = @TKLIB@
 BLTLIB = @BLTLIB@
-TCLOBJCLIB = @TCLOBJCLIB@
 FFILIB = @FFILIB@
 
 PNGLIB = -lpng
@@ -37,13 +34,13 @@ X_LIBS = @X_LIBS@
 X_EXTRA_LIBS = @X_EXTRA_LIBS@
 GUILIBS = @GUILIBS@
 
-LDFLAGS = -L$(libdir) @RPATH@$(libdir) $(TCLOBJCLDFLAGS) $(BLTLDFLAGS) $(TCLLDFLAGS) $(TKLDFLAGS) $(FFILDFLAGS) $(PNGLDFLAGS) $(ZLIBLDFLAGS) $(X_LIBS)
+LDFLAGS = -L$(libdir) @RPATH@$(libdir) $(BLTLDFLAGS) $(TCLLDFLAGS) $(TKLDFLAGS) $(FFILDFLAGS) $(PNGLDFLAGS) $(ZLIBLDFLAGS) $(X_LIBS)
 #LINK = libtool --mode link $(CC) $(CFLAGS) $(LDFLAGS) -o $@
 LINK = $(CC) $(CFLAGS) $(LDFLAGS) -o $@
 
-SYSLIBS = $(TCLOBJCLIB) $(BLTLIB) $(TKLIB) $(TCLLIB) $(PNGLIB) $(ZLIBLIB) $(FFILIB) $(GUILIBS) -lm
+SYSLIBS = $(BLTLIB) $(TKLIB) $(TCLLIB) $(PNGLIB) $(ZLIBLIB) $(FFILIB) $(GUILIBS) -lm
 
-SWARMLIBS = -lspace -lanalysis -lsimtools -lsimtoolsgui -ltkobjc -lactivity -lrandom -lobjectbase -lcollections -ldefobj -lmisc
+SWARMLIBS = -lspace -lanalysis -lsimtools -lsimtoolsgui -ltkobjc -ltclobjc -lactivity -lrandom -lobjectbase -lcollections -ldefobj -lmisc
 
 LIBS = @LIBS@
 
