@@ -1,3 +1,13 @@
+1998-08-10  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* configure.in: Call md_CHECK_NEXTSTEP.
+	(AC_OUTPUT): Extract src/tclobjc/Makefile.
+
+	* Makefile.appl.in (SWARMLIBS): Add -ltclobjc.
+
+	* INSTALL, Makefile.appl.in, configure.in, config.swarm.in: Remove
+	mention of tclobjc.
+
 1998-08-08  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
 	* NEWS: Note addition of Pixmap output and snapshot capability.
